<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FAQFragment"
    android:background="@color/shada"
    android:id="@+id/frag_faq">

    <!-- TODO: Update blank fragment layout -->



        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/faq_map"></com.google.android.gms.maps.MapView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="70dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:weightSum="6"-->
                <!--android:orientation="horizontal">-->

                <!--<ImageView-->
                <!--android:layout_weight="1"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_pin_drop_black_24dp"/>-->

                    <!--&lt;!&ndash;<fragment&ndash;&gt;-->
                        <!--&lt;!&ndash;android:id="@+id/faq_place_location"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:layout_weight="5"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>&ndash;&gt;-->
                <!--</LinearLayout>-->

                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:layout_marginLeft="16dp"-->
                    <!--android:layout_marginRight="16dp"-->
                    <!--android:background="@color/dividerColor"/>-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:weightSum="6"-->
                    <!--android:orientation="horizontal">-->

                    <!--<ImageView-->
                        <!--android:layout_weight="1"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="@drawable/ic_map_black_24dp"/>-->

                    <!--<fragment-->
                        <!--android:id="@+id/faq_place_destination"-->
                        <!--android:layout_weight="5"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>-->
                <!--</LinearLayout>-->


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:id="@+id/clothes">
                    <EditText
                        android:id="@+id/clothes_num2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:padding="10dp"
                        android:layout_marginLeft="90dp"
                        android:layout_marginRight="90dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:hint="number of clothes"
                        android:inputType="number"
                        android:paddingStart="12dp"
                        android:paddingEnd="24dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:id="@+id/both"
                    android:layout_below="@+id/clothes">


                <LinearLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerHorizontal="false"
                    android:orientation="vertical"
                    android:id="@+id/selectCardGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp">
                    <ImageView
                        android:id="@+id/selectedUberX"
                        android:src="@drawable/car_cui_select"
                        android:layout_marginEnd="8dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ksh2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:gravity="center"
                            android:textColor="@color/Black"
                            android:text="@string/ksh"
                            android:layout_marginEnd="2dp"/>

                    <TextView
                        android:id="@+id/amount1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:text="@string/cost2" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="10dp"
                    android:layout_centerHorizontal="false"
                    android:orientation="vertical"
                    android:id="@+id/selectCardGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/selectCardGroup">
                    <ImageView
                        android:id="@+id/selectedUberBlack"
                        android:src="@drawable/car_vip"
                        android:layout_marginEnd="8dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/ksh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:gravity="center"
                            android:textColor="@color/Black"
                            android:text="@string/ksh"
                            android:layout_marginEnd="2dp"/>

                        <TextView
                            android:id="@+id/amount2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:gravity="center"
                            android:textColor="@color/red"
                            android:text="@string/cost" />

                    </LinearLayout>



                </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/faq_btnPickupRequest"
                    android:layout_below="@+id/both"
                    android:text="PICKUP REQUEST"
                    android:background="@drawable/rounded_corners"
                    android:textColor="@color/shada"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


</RelativeLayout>






